Fix alignment of Equipment Notes

--- a/display/shared/styling/parts/actor-sheets.less
+++ b/display/shared/styling/parts/actor-sheets.less
@@ -242,6 +242,7 @@
   .equipment-notes {
     margin-left: 10px;
     margin-right: 10px;
+    align-self: flex-start;
 
     .field-header {
       font-size: 16pt;
